--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,15 @@ Django==3.2.6
 gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.6.3
+inflect==5.3.0
 Markdown==3.3.4
 martor==1.6.4
+Pillow==8.3.1
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
+stripe==2.60.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
+whitenoise==5.3.0
 zipp==3.5.0
-whitenoise
-inflect
-stripe
