--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.4.1
 certifi==2021.5.30
 charset-normalizer==2.0.4
+dj-database-url==0.5.0
 Django==3.2.6
+django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.6.3
@@ -9,6 +11,7 @@ inflect==5.3.0
 Markdown==3.3.4
 martor==1.6.4
 Pillow==8.3.1
+psycopg2==2.9.1
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
