--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ charset-normalizer==2.0.4
 dj-database-url==0.5.0
 Django==3.2.6
 django-heroku==0.3.1
+gitdb==4.0.7
+GitPython==3.1.18
 gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.6.3
@@ -14,6 +16,7 @@ Pillow==8.3.1
 psycopg2==2.9.1
 pytz==2021.1
 requests==2.26.0
+smmap==4.0.0
 sqlparse==0.4.1
 stripe==2.60.0
 typing-extensions==3.10.0.0
