--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,8 @@ dmypy.json
 # SCSS mapping
 .sass-cache/
 *.css.map
+
+# blank.txt/
+
+# **/git_publishing/deploy/*
+# !/git_publishing/deploy/blank.txt
